Updated application properties

--- a/application.properties
+++ b/application.properties
@@ -41,6 +41,9 @@ spring.jpa.generate-ddl=true
 endpoints.shutdown.enabled=true
 
 spring.jpa.generate-ddl=true
+symbIoTe.core.url=http://www.example.com
+platform.id=588b81b576e84844774acdd1
+rap.url=http://localhost:8100/rap
 
 
 ## Rabbit specific binder bits
