Updated application properties with symbIoTe open external server url

--- a/application.properties
+++ b/application.properties
@@ -41,8 +41,8 @@ spring.jpa.generate-ddl=true
 endpoints.shutdown.enabled=true
 
 spring.jpa.generate-ddl=true
-symbIoTe.core.url=http://www.example.com
-platform.id=588b81b576e84844774acdd1
+symbIoTe.core.url=http://symbiote-ext.man.poznan.pl:8101/cloudCoreInterface/v1
+platform.id=589b1db276e84828d172e741
 rap.url=http://localhost:8100/rap
 
 
