Added RH configuration properties

--- a/application.properties
+++ b/application.properties
@@ -42,9 +42,13 @@ endpoints.shutdown.enabled=true
 
 spring.jpa.generate-ddl=true
 symbIoTe.core.url=http://symbiote-ext.man.poznan.pl:8101/cloudCoreInterface/v1
-platform.id=589b1db276e84828d172e741
-rap.url=http://localhost:8100/rap
 
+## Registration Handler Properties
+reghandler.reader.impl=filePlatformInfoReader
+reghandler.init.autoregister=true
+symbiote.rabbitmq.host.ip=localhost
+platform.id=58f9ed2276e848294280133a
+symbIoTe.interworkinginterface.url=http://localhost:8101/cloudCoreInterface/v1
 
 ## Rabbit specific binder bits
 # spring.cloud.stream.binder.rabbit.default.default-delivery-mode=persistent
