Updated application.properties with RAP configuration

--- a/application.properties
+++ b/application.properties
@@ -43,13 +43,25 @@ endpoints.shutdown.enabled=true
 spring.jpa.generate-ddl=true
 symbIoTe.core.url=http://symbiote-ext.man.poznan.pl:8101/cloudCoreInterface/v1
 
-## Registration Handler Properties
-reghandler.reader.impl=filePlatformInfoReader
+##########################################################
+## Registration Handler Configuration #####################################
+##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
 symbiote.rabbitmq.host.ip=localhost
 platform.id=58f9ed2276e848294280133a
 symbIoTe.interworkinginterface.url=http://localhost:8101/cloudCoreInterface/v1
 
+##########################################################
+## RAP Configuration #####################################
+##########################################################
+rap.mongo.dbname = resources_db
+# use this flags to enable/disable northbound interfaces
+rap.northbound.interface.REST=true
+rap.northbound.interface.OData=true
+rap.northbound.interface.WebSocket=false
+# use this flag to enable platform specific plugin
+# (disable if external plugin is used)
+rap.enableSpecificPlugin=false
 ## Rabbit specific binder bits
 # spring.cloud.stream.binder.rabbit.default.default-delivery-mode=persistent
 # spring.cloud.stream.binder.rabbit.default.acknowledge-mode=manual
