--- a/AuthenticationAuthorizationManager.properties
+++ b/AuthenticationAuthorizationManager.properties
@@ -1,11 +1,13 @@
-server.port=${PORT:8300}
-message = Hello!
+server.port=${PORT:8443}
 
 # define the destination to which the input MessageChannel should be bound
-spring.cloud.stream.bindings.input.destination = CloudAuthenticationAuthorizationManagers
+spring.cloud.stream.bindings.input.destination = AuthenticationAuthorizationManagers
 
 # ensures 1 node in a group gets message (point-to-point, not a broadcast)
-spring.cloud.stream.bindings.input.group = CloudAuthenticationAuthorizationManagers-group
+spring.cloud.stream.bindings.input.group = AuthenticationAuthorizationManagers-group
 
 # ensure that the Q is durable
 spring.cloud.stream.bindings.input.durableSubscription = true
+
+# defines the name of Core AAM database in mongoDB
+aam.database.name=symbiote-aam-database
