AMQP settings for AAM

--- a/application.properties
+++ b/application.properties
@@ -25,8 +25,12 @@ logging.level.com.netflix.discovery=OFF
 #spring.zipkin.base-url=http://${DOCKER_IP}:9411
 spring.zipkin.base-url=http://localhost:8762
 
-
-
+###########################################
+# AMQP config
+###########################################
+rabbit.host=<TODO set properly>
+rabbit.username=<TODO set properly (e.g. guest for localhost)>
+rabbit.password=<TODO set properly (e.g. guest for localhost)>
 
 
 endpoints.shutdown.enabled=true
