Added security username and password

--- a/application.properties
+++ b/application.properties
@@ -32,6 +32,11 @@ rabbit.host=<TODO set properly>
 rabbit.username=<TODO set properly (e.g. guest for localhost)>
 rabbit.password=<TODO set properly (e.g. guest for localhost)>
 
+###########################################
+# Security Handler Config
+###########################################
+security.user=<TODO set properly (username used during registration)>
+security.password=<TODO set properly (password used during registration)>
 
 endpoints.shutdown.enabled=true
 
@@ -50,7 +55,6 @@ spring.jpa.generate-ddl=true
 ## Registration Handler Configuration #####################################
 ##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
-symbiote.rabbitmq.host.ip=localhost
 platform.id=58f9ed2276e848294280133a
 symbIoTe.interworkinginterface.url=http://localhost:8101/cloudCoreInterface/v1
 
