--- a/application.properties
+++ b/application.properties
@@ -37,6 +37,7 @@ rabbit.password=<TODO set properly (e.g. guest for localhost)>
 ###########################################
 security.user=<TODO set properly (username used during registration)>
 security.password=<TODO set properly (password used during registration)>
+symbiote.coreaam.url=http://localhost:8101/cloudCoreInterface/v1
 
 endpoints.shutdown.enabled=true
 
