--- a/application.properties
+++ b/application.properties
@@ -37,7 +37,7 @@ rabbit.password=<TODO set properly (e.g. guest for localhost)>
 ###########################################
 security.user=<TODO set properly (username used during registration)>
 security.password=<TODO set properly (password used during registration)>
-symbiote.coreaam.url=http://localhost:8101/cloudCoreInterface/v1
+symbiote.coreaam.url=<TODO set properly (format: http://{nginxIp}:{nginxPort}/cloudCoreInterface/v1 e.g. http://localhost:8101/cloudCoreInterface/v1)>
 
 endpoints.shutdown.enabled=true
 
@@ -56,8 +56,8 @@ spring.jpa.generate-ddl=true
 ## Registration Handler Configuration #####################################
 ##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
-platform.id=58f9ed2276e848294280133a
-symbIoTe.interworkinginterface.url=http://localhost:8101/cloudCoreInterface/v1
+platform.id=<TODO set properly>
+symbIoTe.interworkinginterface.url=<TODO set properly (format: http://{nginxIp}:{nginxPort}/cloudCoreInterface/v1 e.g. http://localhost:8101/cloudCoreInterface/v1)>
 
 ##########################################################
 ## RAP Configuration #####################################
