Changed symbIoTeLibraries version to 0.2.1

--- a/application.properties
+++ b/application.properties
@@ -28,16 +28,16 @@ spring.zipkin.base-url=http://localhost:8762
 ###########################################
 # AMQP config
 ###########################################
-rabbit.host=<TODO set properly>
-rabbit.username=<TODO set properly (e.g. guest for localhost)>
-rabbit.password=<TODO set properly (e.g. guest for localhost)>
+rabbit.host=localhost
+rabbit.username=guest
+rabbit.password=guest
 
 ###########################################
 # Security Handler Config
 ###########################################
-security.user=<TODO set properly (username used during registration)>
-security.password=<TODO set properly (password used during registration)>
-symbiote.coreaam.url=<TODO set properly (format: http://{nginxIp}:{nginxPort}/cloudCoreInterface/v1 e.g. http://localhost:8101/cloudCoreInterface/v1)>
+security.user=Test1
+security.password=Test1
+symbiote.coreaam.url=https://symbiote-dev.man.poznan.pl:8100/coreInterface/v1
 
 endpoints.shutdown.enabled=true
 
@@ -56,8 +56,8 @@ spring.jpa.generate-ddl=true
 ## Registration Handler Configuration #####################################
 ##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
-platform.id=<TODO set properly>
-symbIoTe.interworkinginterface.url=<TODO set properly (format: http://{nginxIp}:{nginxPort}/cloudCoreInterface/v1 e.g. http://localhost:8101/cloudCoreInterface/v1)>
+platform.id=test1Plat
+symbIoTe.interworkinginterface.url=http://localhost:8102/cloudCoreInterface/v1
 
 ##########################################################
 ## RAP Configuration #####################################
