added FM RMQ configs

--- a/application.properties
+++ b/application.properties
@@ -98,3 +98,10 @@ rabbit.routingKey.login.request=symbIoTe.AuthenticationAuthorizationManager.logi
 rabbit.routingKey.register.app.request=symbIoTe.AuthenticationAuthorizationManager.application_register_request
 rabbit.routingKey.register.platform.request=symbIoTe-AuthenticationAuthorizationManager.platform_register_request
 
+##########################################################
+## FederationManager Configuration 
+##########################################################
+rabbit.exchange.federation=symbIoTe.federation
+rabbit.routingKey.federation.created=symbIoTe.federation.created
+rabbit.routingKey.federation.changed=symbIoTe.federation.changed
+rabbit.routingKey.federation.deleted=symbIoTe.federation.deleted
