--- a/application.properties
+++ b/application.properties
@@ -88,20 +88,30 @@ rabbit.exchange.aam.durable=true
 rabbit.exchange.aam.autodelete=false
 rabbit.exchange.aam.internal=false
 # amqp queues
+# credentials validation/revocation
 rabbit.queue.validate.request=symbIoTe-AuthenticationAuthorizationManager-validate_request
-rabbit.queue.getHomeToken.request=symbIoTe-AuthenticationAuthorizationManager-getHomeToken_request
-rabbit.queue.get.user.details=symbIoTe-AuthenticationAuthorizationManager-get_user_details_request
-rabbit.queue.manage.user.request=symbIoTe-AuthenticationAuthorizationManager-manage_user_request
 rabbit.queue.manage.revocation.request=symbIoTe-AuthenticationAuthorizationManager-manage_revocation_request
+# token attributes management
 rabbit.queue.manage.attributes=symbIoTe-AuthenticationAuthorizationManager-manage_local_attributes_request
+rabbit.queue.manage.federation.rule=symbIoTe-AuthenticationAuthorizationManager-federation_rule_manage_request
+# users management
+rabbit.queue.manage.user.request=symbIoTe-AuthenticationAuthorizationManager-manage_user_request
+rabbit.queue.get.user.details=symbIoTe-AuthenticationAuthorizationManager-get_user_details_request
+# probably dropped in R4
+rabbit.queue.getHomeToken.request=symbIoTe-AuthenticationAuthorizationManager-getHomeToken_request
 
 # routing keys
+# credentials validation/revocation
 rabbit.routingKey.validate.request=symbIoTe.AuthenticationAuthorizationManager.validate_request
-rabbit.routingKey.getHomeToken.request=symbIoTe.AuthenticationAuthorizationManager.getHomeToken_request
-rabbit.routingKey.get.user.details=symbIoTe-AuthenticationAuthorizationManager.get_user_details_request
-rabbit.routingKey.manage.user.request=symbIoTe.AuthenticationAuthorizationManager.manage_user_request
 rabbit.routingKey.manage.revocation.request=symbIoTe-AuthenticationAuthorizationManager.manage_revocation_request
+# token attributes management
 rabbit.routingKey.manage.attributes=symbIoTe-AuthenticationAuthorizationManager.manage_local_attributes_request
+rabbit.routingKey.manage.federation.rule=symbIoTe-AuthenticationAuthorizationManager.federation_rule_manage_request
+# users management
+rabbit.routingKey.manage.user.request=symbIoTe.AuthenticationAuthorizationManager.manage_user_request
+rabbit.routingKey.get.user.details=symbIoTe-AuthenticationAuthorizationManager.get_user_details_request
+# probably dropped in R4
+rabbit.routingKey.getHomeToken.request=symbIoTe.AuthenticationAuthorizationManager.getHomeToken_request
 
 ##########################################################
 ## FederationManager Configuration 
