--- a/application.properties
+++ b/application.properties
@@ -25,39 +25,39 @@ logging.level.com.netflix.discovery=OFF
 #spring.zipkin.base-url=http://${DOCKER_IP}:9411
 spring.zipkin.base-url=http://localhost:8762
 
+endpoints.shutdown.enabled=true
+spring.jpa.generate-ddl=true
+
 ###########################################
 # AMQP config
 ###########################################
-rabbit.host=localhost
-rabbit.username=guest
-rabbit.password=guest
+rabbit.host=<TODO set properly>
+rabbit.username=<TODO set properly (e.g. guest for localhost)>
+rabbit.password=<TODO set properly (e.g. guest for localhost)>
 
 ###########################################
 # Security Handler Config
 ###########################################
-security.user=Test1
-security.password=Test1
-symbiote.coreaam.url=https://symbiote-dev.man.poznan.pl:8100/coreInterface/v1
+platform.id=<TODO set properly>
 
-endpoints.shutdown.enabled=true
+security.user=<TODO set properly (platform owner username used during registration)>
+security.password=<TODO set properly (platform owner password used during registration)>
 
-spring.jpa.generate-ddl=true
+symbIoTe.coreaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
+symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
+symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
+symbIoTe.localaam.url=<TODO set properly (e.g.: https://localhost:8443)> 
 
-#eureka.instance.hostname=${vcap.application.uris[0]:localhost}
-#eureka.instance.nonSecurePort=80
-
-
-endpoints.shutdown.enabled=true
-
-spring.jpa.generate-ddl=true
 
 ##########################################################
 ## Registration Handler Configuration #####################################
 ##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
 platform.id=test1Plat
-symbIoTe.interworkinginterface.url=http://localhost:8102/cloudCoreInterface/v1
+symbIoTe.core.cloud.interface.url=https://symbiote-dev.man.poznan.pl:8101/cloudCoreInterface/v1
+symbIoTe.interworking.interface.url=http://www.example.com/Test1Platform
+symbIoTe.localaam.url=https://symbiote-dev.man.poznan.pl:8100/coreInterface/v1
 
 ##########################################################
 ## RAP Configuration #####################################
