--- a/application.properties
+++ b/application.properties
@@ -40,24 +40,18 @@ rabbit.password=<TODO set properly (e.g. guest for localhost)>
 ###########################################
 platform.id=<TODO set properly>
 
-security.user=<TODO set properly (platform owner username used during registration)>
-security.password=<TODO set properly (platform owner password used during registration)>
-
 symbIoTe.coreaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
-symbIoTe.localaam.url=<TODO set properly (e.g.: https://localhost:8443)> 
+symbIoTe.localaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1 if you do not want to always use your local AAM)> 
 
 
 ##########################################################
 ## Registration Handler Configuration #####################################
 ##########################################################reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
-platform.id=test1Plat
-symbIoTe.core.cloud.interface.url=https://symbiote-dev.man.poznan.pl:8101/cloudCoreInterface/v1
-symbIoTe.interworking.interface.url=http://www.example.com/Test1Platform
-symbIoTe.localaam.url=https://symbiote-dev.man.poznan.pl:8100/coreInterface/v1
+symbIoTe.component.clientId=reghandler@${platform.id}
 
 ##########################################################
 ## RAP Configuration #####################################
