--- a/application.properties
+++ b/application.properties
@@ -41,17 +41,17 @@ rabbit.password=<TODO set properly (e.g. guest for localhost)>
 platform.id=<TODO set properly>
 
 symbIoTe.coreaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
-symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8101/cloudCoreInterface/v1)>
+symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
 symbIoTe.localaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1 if you do not want to always use your local AAM)> 
 
 
 ##########################################################
-## Registration Handler Configuration #####################################
-##########################################################reghandler.reader.impl=filePlatformInfoReader
+## Registration Handler Configuration ####################
+##########################################################
+reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
-symbIoTe.component.clientId=reghandler@${platform.id}
 
 ##########################################################
 ## RAP Configuration #####################################
@@ -106,6 +106,14 @@ rabbit.routingKey.manage.user.request=symbIoTe.AuthenticationAuthorizationManage
 rabbit.routingKey.get.user.details=symbIoTe-AuthenticationAuthorizationManager.get_user_details_request
 # probably dropped in R4
 rabbit.routingKey.getHomeToken.request=symbIoTe.AuthenticationAuthorizationManager.getHomeToken_request
+
+
+##########################################################
+## Monitoring Configuration ##############################
+##########################################################
+
+# Send notification to CRM every minute
+symbIoTe.crm.publish.period=0 * * * * ?
 
 ##########################################################
 ## FederationManager Configuration 
