Updated symbIoTe.localaam.url in application.properties

--- a/application.properties
+++ b/application.properties
@@ -44,7 +44,7 @@ symbIoTe.coreaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:810
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
-symbIoTe.localaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1 if you do not want to always use your local AAM)> 
+symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{PAAM_port} if you do not want to always use your local AAM e.g. https://mysymbiote.com:8443)> 
 
 
 ##########################################################
