unifying properties aam.environment.coreInterfaceAddress and symbiote.coreaam.url into symbIoTe.core.interface.url

--- a/application.properties
+++ b/application.properties
@@ -36,15 +36,14 @@ rabbit.username=<TODO set properly (e.g. guest for localhost)>
 rabbit.password=<TODO set properly (e.g. guest for localhost)>
 
 ###########################################
-# Security Handler Config
+# SymbIoTe Security Config
 ###########################################
 platform.id=<TODO set properly>
-
-symbIoTe.coreaam.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
+symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
-symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{PAAM_port} if you do not want to always use your local AAM e.g. https://mysymbiote.com:8443)> 
+symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{PAAM_port} needed to initialize your components use your local AAM e.g. https://mysymbiote.com:8443)> 
 
 
 ##########################################################
