Minor changes in application.properties

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,32 @@
+#################################################################
+## TODO: Below are the configurations need to be setup by the user
+#################################################################
+
+#################################################################
+## Platform config
+#################################################################
+platform.id=<TODO set properly>
+
+#################################################################
+## AMQP config
+#################################################################
+rabbit.host=<TODO set properly>
+rabbit.username=<TODO set properly (e.g. guest for localhost)>
+rabbit.password=<TODO set properly (e.g. guest for localhost)>
+
+#################################################################
+## SymbIoTe Security Config
+#################################################################
+symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
+symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
+
+symbIoTe.interworking.interface.url=<TODO set properly (format: http://{HostName}:{nginx_port}/cloudCoreInterface/v1 e.g. http://mysymbiote:8102/cloudCoreInterface/v1)>
+symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{nginx_port}/paam needed to initialize your components use your local AAM e.g. https://mysymbiote.com:8102/paam> 
+
+#################################################################
+## END OF TODO
+#################################################################
+
 debug=true
 spring.sleuth.sampler.percentage=1.0
 
@@ -28,33 +57,16 @@ spring.zipkin.base-url=http://localhost:8762
 endpoints.shutdown.enabled=true
 spring.jpa.generate-ddl=true
 
-###########################################
-# AMQP config
-###########################################
-rabbit.host=<TODO set properly>
-rabbit.username=<TODO set properly (e.g. guest for localhost)>
-rabbit.password=<TODO set properly (e.g. guest for localhost)>
 
-###########################################
-# SymbIoTe Security Config
-###########################################
-platform.id=<TODO set properly>
-symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}:8100/coreInterface/v1)>
-symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
-
-symbIoTe.interworking.interface.url=<TODO set properly (format: http://{nginxIp}:8102/cloudCoreInterface/v1 e.g. http://localhost:8102/cloudCoreInterface/v1)>
-symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{PAAM_port} needed to initialize your components use your local AAM e.g. https://mysymbiote.com:8443)> 
-
-
-##########################################################
-## Registration Handler Configuration ####################
-##########################################################
+#################################################################
+## Registration Handler Configuration 
+#################################################################
 reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
 
-##########################################################
-## RAP Configuration #####################################
-##########################################################
+#################################################################
+## RAP Configuration 
+#################################################################
 rap.mongo.dbname = resources_db
 # use this flags to enable/disable northbound interfaces
 rap.northbound.interface.REST=true
@@ -72,9 +84,9 @@ rap.enableSpecificPlugin=false
 # spring.cloud.stream.binder.rabbit.default.auto-bind-dlq=true
 # spring.cloud.stream.binder.rabbit.default.republish-to-dlq=true
 
-##########################################################
+#################################################################
 ## AAM Configuration 
-##########################################################
+#################################################################
 rabbit.exchange.aam.name=symbIoTe.AuthenticationAuthorizationManager
 rabbit.exchange.aam.type=direct
 rabbit.exchange.aam.durable=true
@@ -107,16 +119,16 @@ rabbit.routingKey.get.user.details=symbIoTe-AuthenticationAuthorizationManager.g
 rabbit.routingKey.getHomeToken.request=symbIoTe.AuthenticationAuthorizationManager.getHomeToken_request
 
 
-##########################################################
-## Monitoring Configuration ##############################
-##########################################################
+#################################################################
+## Monitoring Configuration 
+#################################################################
 
 # Send notification to CRM every minute
 symbIoTe.crm.publish.period=0 * * * * ?
 
-##########################################################
+#################################################################
 ## FederationManager Configuration 
-##########################################################
+#################################################################
 rabbit.exchange.federation=symbIoTe.federation
 rabbit.routingKey.federation.created=symbIoTe.federation.created
 rabbit.routingKey.federation.changed=symbIoTe.federation.changed
