Cache properties added

--- a/AuthenticationAuthorizationManager.properties
+++ b/AuthenticationAuthorizationManager.properties
@@ -11,3 +11,10 @@ spring.cloud.stream.bindings.input.durableSubscription = true
 
 # defines the name of Core AAM database in mongoDB
 aam.database.name=symbiote-aam-database
+
+# time for which validToken, componentCertificate, availableAAMs should be cached to avoid comunication with another AAM
+aam.cache.validToken.expireMillis=60000
+aam.cache.componentCertificate.expireSeconds=60
+aam.cache.availableAAMs.expireSeconds=60
+# if size set to -1, validToken cache has no limit
+aam.cache.validToken.size=1000
