--- a/application.properties
+++ b/application.properties
@@ -21,7 +21,7 @@ symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHo
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}:8101/cloudCoreInterface/v1)>
 
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{HostName}:{nginx_port}/cloudCoreInterface/v1 e.g. http://mysymbiote:8102/cloudCoreInterface/v1)>
-symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{nginx_port}/paam needed to initialize your components use your local AAM e.g. https://mysymbiote.com:8102/paam> 
+symbIoTe.localaam.url=<TODO set properly (format: http(s)://{hostAAM}:{portAAM}  https - when different host, http possible on localhost> 
 
 #################################################################
 ## END OF TODO
