added queues for SYM-728

--- a/application.properties
+++ b/application.properties
@@ -135,3 +135,10 @@ rabbit.routingKey.federation.changed=symbIoTe.federation.changed
 rabbit.routingKey.federation.deleted=symbIoTe.federation.deleted
 
 rabbit.queue.federation.get_federation_history=symbIoTe.federation.get_federation_history
+
+##########################################################
+## TrustManager Configuration 
+##########################################################
+rabbit.queue.trust.get_platform_reputation=symbIoTe.federation.get_platform_reputation
+rabbit.queue.trust.get_resource_trust=symbIoTe.federation.get_resource_trust
+rabbit.queue.trust.get_adaptive_resource_trust=symbIoTe.federation.get_adaptive_resource_trust
