configured deployment type dependent AMQP listeners
hardened AAM configuration

--- a/AuthenticationAuthorizationManager.properties
+++ b/AuthenticationAuthorizationManager.properties
@@ -18,3 +18,6 @@ aam.cache.componentCertificate.expireSeconds=60
 aam.cache.availableAAMs.expireSeconds=60
 # if size set to -1, validToken cache has no limit
 aam.cache.validToken.size=1000
+
+# required to properly run as PAAM
+spring.profiles.active=platform
