Added registration handler queues

--- a/application.properties
+++ b/application.properties
@@ -64,6 +64,22 @@ spring.jpa.generate-ddl=true
 reghandler.reader.impl=filePlatformInfoReader
 reghandler.init.autoregister=true
 
+rabbit.exchange.rh.name=symbIoTe.registrationHandler
+rabbit.exchange.rh.type=direct
+rabbit.exchange.rh.durable=true
+rabbit.exchange.rh.autodelete=false
+rabbit.exchange.rh.internal=false
+
+rabbit.routingKey.rh.core.register=symbIoTe.rh.resource.core.register
+rabbit.routingKey.rh.core.update=symbIoTe.rh.resource.core.update
+rabbit.routingKey.rh.core.delete=symbIoTe.rh.resource.core.delete
+
+rabbit.routingKey.rh.updated=symbIoTe.rh.resource.updated
+rabbit.routingKey.rh.deleted=symbIoTe.rh.resource.deleted
+rabbit.routingKey.rh.shared=symbIoTe.rh.resource.shared
+rabbit.routingKey.rh.unshared=symbIoTe.rh.resource.unshared
+
+
 #################################################################
 ## RAP Configuration 
 #################################################################
@@ -83,6 +99,7 @@ rap.enableSpecificPlugin=false
 # spring.cloud.stream.binder.rabbit.default.default-requeue-rejected=true
 # spring.cloud.stream.binder.rabbit.default.auto-bind-dlq=true
 # spring.cloud.stream.binder.rabbit.default.republish-to-dlq=true
+
 
 #################################################################
 ## AAM Configuration 
@@ -112,12 +129,14 @@ rabbit.routingKey.manage.attributes=symbIoTe-AuthenticationAuthorizationManager.
 rabbit.routingKey.manage.user.request=symbIoTe.AuthenticationAuthorizationManager.manage_user_request
 rabbit.routingKey.get.user.details=symbIoTe-AuthenticationAuthorizationManager.get_user_details_request
 
+
 #################################################################
 ## Monitoring Configuration 
 #################################################################
 
 # Send notification to CRM every minute
 symbIoTe.crm.publish.period=0 * * * * ?
+
 
 #################################################################
 ## FederationManager Configuration 
@@ -129,9 +148,25 @@ rabbit.routingKey.federation.deleted=symbIoTe.federation.deleted
 
 rabbit.queue.federation.get_federation_history=symbIoTe.federation.get_federation_history
 
+
 ##########################################################
 ## TrustManager Configuration 
 ##########################################################
 rabbit.queue.trust.get_platform_reputation=symbIoTe.federation.get_platform_reputation
 rabbit.queue.trust.get_resource_trust=symbIoTe.federation.get_resource_trust
 rabbit.queue.trust.get_adaptive_resource_trust=symbIoTe.federation.get_adaptive_resource_trust
+
+
+##########################################################
+## Platform Registry Configuration 
+##########################################################
+rabbit.exchange.platformRegistry.name=symbIoTe.platformRegistry
+rabbit.exchange.platformRegistry.type=direct
+rabbit.exchange.platformRegistry.durable=true
+rabbit.exchange.platformRegistry.autodelete=false
+rabbit.exchange.platformRegistry.internal=false
+
+rabbit.routingKey.platformRegistry.update=symbIoTe.platformRegistry.resource.update
+rabbit.routingKey.platformRegistry.delete=symbIoTe.platformRegistry.resource.delete
+rabbit.routingKey.platformRegistry.share=symbIoTe.platformRegistry.resource.share
+rabbit.routingKey.platformRegistry.unshare=symbIoTe.platformRegistry.resource.unshare
