--- a/application.properties
+++ b/application.properties
@@ -142,6 +142,11 @@ symbIoTe.crm.publish.period=0 * * * * ?
 ## FederationManager Configuration 
 #################################################################
 rabbit.exchange.federation=symbIoTe.federation
+rabbit.exchange.federation.type=topic
+rabbit.exchange.federation.durable=true
+rabbit.exchange.federation.autodelete=false
+rabbit.exchange.federation.internal=false
+
 rabbit.routingKey.federation.created=symbIoTe.federation.created
 rabbit.routingKey.federation.changed=symbIoTe.federation.changed
 rabbit.routingKey.federation.deleted=symbIoTe.federation.deleted
