--- a/application.properties
+++ b/application.properties
@@ -143,7 +143,7 @@ symbIoTe.crm.publish.period=0 * * * * ?
 #################################################################
 rabbit.exchange.federation=symbIoTe.federation
 rabbit.exchange.federation.type=topic
-rabbit.exchange.federation.durable=true
+rabbit.exchange.federation.durable=false
 rabbit.exchange.federation.autodelete=false
 rabbit.exchange.federation.internal=false
 
