--- a/application.properties
+++ b/application.properties
@@ -20,7 +20,7 @@ rabbit.password=<TODO set properly (e.g. guest for localhost)>
 symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHost}/coreInterface)>
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}/cloudCoreInterface)>
   
-symbIoTe.interworking.interface.url=<TODO set properly (format: http://{HostName}:{nginx_port}/cloudCoreInterface)>
+symbIoTe.interworking.interface.url=<TODO set properly (format: http://{HostName}:{nginx_port})>
 symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{nginx_port}/paam)>
 
 #################################################################
