--- a/application.properties
+++ b/application.properties
@@ -10,9 +10,22 @@ platform.id=<TODO set properly>
 #################################################################
 ## AMQP config
 #################################################################
-rabbit.host=<TODO set properly>
-rabbit.username=<TODO set properly (e.g. guest for localhost)>
-rabbit.password=<TODO set properly (e.g. guest for localhost)>
+
+spring.rabbitmq.host=symbiote-rabbitmq
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+rabbit.host=${spring.rabbitmq.host}
+rabbit.username=${spring.rabbitmq.username}
+rabbit.password=${spring.rabbitmq.password}
+
+#################################################################
+## MongoDB config
+#################################################################
+
+spring.data.mongodb.host=symbiote-mongo
+
+aam.database.host=${spring.data.mongodb.host}
 
 #################################################################
 ## SymbIoTe Security Config
