--- a/application.properties
+++ b/application.properties
@@ -11,7 +11,7 @@ platform.id=<TODO set properly>
 ## AMQP config
 #################################################################
 
-spring.rabbitmq.host=symbiote-rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
@@ -23,7 +23,7 @@ rabbit.password=${spring.rabbitmq.password}
 ## MongoDB config
 #################################################################
 
-spring.data.mongodb.host=symbiote-mongo
+spring.data.mongodb.host=localhost
 
 aam.database.host=${spring.data.mongodb.host}
 
