--- a/application.properties
+++ b/application.properties
@@ -166,14 +166,22 @@ rabbit.routingKey.federation.deleted=symbIoTe.federation.deleted
 
 rabbit.queue.federation.get_federation_history=symbIoTe.federation.get_federation_history
 
-
 ##########################################################
 ## TrustManager Configuration 
 ##########################################################
-rabbit.queue.trust.get_platform_reputation=symbIoTe.federation.get_platform_reputation
-rabbit.queue.trust.get_resource_trust=symbIoTe.federation.get_resource_trust
-rabbit.queue.trust.get_adaptive_resource_trust=symbIoTe.federation.get_adaptive_resource_trust
+symbIoTe.trust.resource_trust.period=0 0/15 * * * ?
+symbIoTe.trust.platform_reputation.period=0 5/15 * * * ?
+symbIoTe.trust.adaptive_resource_trust.period=0 10/15 * * * ?
 
+rabbit.exchange.trust=symbIoTe.trust
+rabbit.exchange.trust.type=topic
+rabbit.exchange.trust.durable=false
+rabbit.exchange.trust.autodelete=false
+rabbit.exchange.trust.internal=false
+
+rabbit.routingKey.trust.resource_trust.updated=symbIoTe.trust.resource_trust.updated
+rabbit.routingKey.trust.platform_reputation.updated=symbIoTe.trust.platform_reputation.updated
+rabbit.routingKey.trust.adaptive_resource_trust.updated=symbIoTe.trust.adaptive_resource_trust.updated
 
 ##########################################################
 ## Platform Registry Configuration 
