--- a/application.properties
+++ b/application.properties
@@ -173,15 +173,15 @@ symbIoTe.trust.resource_trust.period=0 0/15 * * * ?
 symbIoTe.trust.platform_reputation.period=0 5/15 * * * ?
 symbIoTe.trust.adaptive_resource_trust.period=0 10/15 * * * ?
 
-rabbit.exchange.trust=symbIoTe.trust
+rabbit.exchange.trust.name=symbIoTe.trust
 rabbit.exchange.trust.type=topic
 rabbit.exchange.trust.durable=false
 rabbit.exchange.trust.autodelete=false
 rabbit.exchange.trust.internal=false
 
-rabbit.routingKey.trust.resource_trust.updated=symbIoTe.trust.resource_trust.updated
-rabbit.routingKey.trust.platform_reputation.updated=symbIoTe.trust.platform_reputation.updated
-rabbit.routingKey.trust.adaptive_resource_trust.updated=symbIoTe.trust.adaptive_resource_trust.updated
+rabbit.routingKey.trust.resourceUpdated=symbIoTe.trust.resource_trust.updated
+rabbit.routingKey.trust.platformUpdated=symbIoTe.trust.platform_reputation.updated
+rabbit.routingKey.trust.adaptiveResourceUpdated=symbIoTe.trust.adaptive_resource_trust.updated
 
 ##########################################################
 ## Platform Registry Configuration 
