Added SLAM properties

--- a/application.properties
+++ b/application.properties
@@ -192,3 +192,14 @@ rabbit.routingKey.platformRegistry.update=symbIoTe.platformRegistry.resource.upd
 rabbit.routingKey.platformRegistry.delete=symbIoTe.platformRegistry.resource.delete
 rabbit.routingKey.platformRegistry.share=symbIoTe.platformRegistry.resource.share
 rabbit.routingKey.platformRegistry.unshare=symbIoTe.platformRegistry.resource.unshare
+
+##########################################################
+## SLA Manager Configuration 
+##########################################################
+rabbit.exchange.sla.name=symbIoTe.slam
+rabbit.exchange.sla.type=direct
+rabbit.exchange.sla.durable=true
+rabbit.exchange.sla.autodelete=false
+rabbit.exchange.sla.internal=false
+
+rabbit.routingKey.sla.violation=federation.sla.violation
