Updated application.properties for 3.0.0

--- a/application.properties
+++ b/application.properties
@@ -34,7 +34,7 @@ symbIoTe.core.interface.url=<TODO set properly (format: https://{CoreInterfaceHo
 symbIoTe.core.cloud.interface.url=<TODO set properly (format: https://{CloudCoreInterfaceHost}/cloudCoreInterface)>
   
 symbIoTe.interworking.interface.url=<TODO set properly (format: http://{HostName}:{nginx_port})>
-symbIoTe.localaam.url=<TODO set properly (format: https://{HostName}:{nginx_port}/paam)>
+symbIoTe.localaam.url=<TODO set properly (format: http://{AAM_host}:8080)>
 
 #################################################################
 ## END OF TODO
@@ -104,6 +104,7 @@ rap.northbound.interface.WebSocket=false
 # use this flag to enable platform specific plugin
 # (disable if external plugin is used)
 rap.enableSpecificPlugin=false
+rabbit.replyTimeout=5000
 ## Rabbit specific binder bits
 # spring.cloud.stream.binder.rabbit.default.default-delivery-mode=persistent
 # spring.cloud.stream.binder.rabbit.default.acknowledge-mode=manual
