Added Bartering And Trading configuration

--- a/application.properties
+++ b/application.properties
@@ -204,3 +204,12 @@ rabbit.exchange.sla.autodelete=false
 rabbit.exchange.sla.internal=false
 
 rabbit.routingKey.sla.violation=federation.sla.violation
+
+##########################################################
+## Bartering And Trading Configuration 
+##########################################################
+#JWT validity
+#time in ms
+btm.deployment.couponEntity.periodic.validity=600000
+#usagesCounter
+btm.deployment.couponEntity.discrete.validity=600000
