--- a/application.properties
+++ b/application.properties
@@ -213,3 +213,6 @@ rabbit.routingKey.sla.violation=federation.sla.violation
 btm.deployment.couponEntity.periodic.validity=600000
 #usagesCounter
 btm.deployment.couponEntity.discrete.validity=600000
+
+rabbit.exchange.bartered.access=symbIoTe.bartered
+rabbit.routingKey.bartered.access=symbIoTe.bartered.access
