--- a/ResourceAccessProxy.properties
+++ b/ResourceAccessProxy.properties
@@ -9,3 +9,8 @@ spring.cloud.stream.bindings.input.group = ResourceAccessProxys-group
 
 # ensure that the Q is durable
 spring.cloud.stream.bindings.input.durableSubscription = true
+
+# use this flags to enable/disable payload validation
+rap.validateActuatorPayload=true
+rap.validateServicePayload=true
+rap.validateServiceResult=true
