--- a/application.properties
+++ b/application.properties
@@ -19,6 +19,9 @@ rabbit.host=${spring.rabbitmq.host}
 rabbit.username=${spring.rabbitmq.username}
 rabbit.password=${spring.rabbitmq.password}
 
+spring.rabbitmq.template.reply-timeout=15000
+rabbit.replyTimeout=${spring.rabbitmq.template.reply-timeout}
+
 #################################################################
 ## MongoDB config
 #################################################################
@@ -104,7 +107,6 @@ rap.northbound.interface.WebSocket=false
 # use this flag to enable platform specific plugin
 # (disable if external plugin is used)
 rap.enableSpecificPlugin=false
-rabbit.replyTimeout=5000
 ## Rabbit specific binder bits
 # spring.cloud.stream.binder.rabbit.default.default-delivery-mode=persistent
 # spring.cloud.stream.binder.rabbit.default.acknowledge-mode=manual
