--- a/application.properties
+++ b/application.properties
@@ -21,6 +21,7 @@ rabbit.password=${spring.rabbitmq.password}
 
 spring.rabbitmq.template.reply-timeout=15000
 rabbit.replyTimeout=${spring.rabbitmq.template.reply-timeout}
+rabbit.message-ttl=${spring.rabbitmq.template.reply-timeout}
 
 #################################################################
 ## MongoDB config
