added AMQP details for client-orient anomaly detection

--- a/application.properties
+++ b/application.properties
@@ -219,3 +219,12 @@ btm.deployment.couponEntity.discrete.validity=600000
 
 rabbit.exchange.bartered.access=symbIoTe.bartered
 rabbit.routingKey.bartered.access=symbIoTe.bartered.access
+
+##########################################################
+## Anomaly Detection Module Configuration 
+##########################################################
+# Clients-oriented anomaly detection verbosity level
+anomaly.verbosity.level=FULL
+# Local AD queues
+rabbit.queue.event=symbIoTe-AnomalyDetectionModule-event
+rabbit.routingKey.event=symbIoTe.AnomalyDetectionModule.event
